--- a/public/contract.html
+++ b/public/contract.html
@@ -8,9 +8,9 @@
 				<meta name="viewport" content="width=device-width, initial-scale=1">
 				<meta http-equiv="Pragma" content="no-cache">
 				<meta http-equiv="Cache-Control" content="no-cache">
-        <title>SUPERNN - 規約</title>
+        <title>VIETNN - 規約</title>
 				<meta name="description" CONTENT="アプリ,5ちゃんねる(旧2ちゃんねる,5ch,2ch)のニュース速報＋系掲示板を自動解析し、人気の高いニュース及び最新のニュースをリアルタイムで計算して提供しています。">
-				<meta name="keywords" CONTENT="アプリ,5ちゃんねる,2ちゃんねる,5ch,2ch,ニュース,速報,まとめ,祭り,SNN,SUPERNN,スレッド">
+				<meta name="keywords" CONTENT="アプリ,5ちゃんねる,2ちゃんねる,5ch,2ch,ニュース,速報,まとめ,祭り,VNN,VIETNN,スレッド">
 
         <!-- CSS -->
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic">
@@ -54,7 +54,7 @@
 	            </div>
 	            <div class="row">
 	            	<div class="col-sm-12 full-width-text-content wow fadeInLeft">							
-					<p>SUPERNNでは, 下記利用規約第9条（不適切な記事の処理）に関して,
+					<p>VIETNN, 下記利用規約第9条（不適切な記事の処理）に関して,
 					下記イメージのように, <span style="color: orange">記事の長押し</span>で不適切投稿の報告と非表示設定をすることができることにご留意ください.</p>
 	                </div>
 							</div>
@@ -100,7 +100,7 @@
 	            	<div class="col-sm-12 full-width-text-content wow fadeInLeft">									
 					<p>
 						この利用規約（以下，「本規約」といいます。）は、
-						SUPERNNブロジェクトおよびテトラサーブ(株)（以下，「当社」といいます。）が提供するサービス
+						VIETNN(株)（以下，「当社」といいます。）が提供するサービス
 						（以下，「本サービス」といいます。）の利用条件を定めるものです。
 						ユーザーの皆さま（以下，「ユーザー」といいます。）には，
 						本規約に従って，本サービスをご利用いただくものとします。
