--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
 				<meta name="viewport" content="width=device-width, initial-scale=1">
 				<meta http-equiv="Pragma" content="no-cache">
 				<meta http-equiv="Cache-Control" content="no-cache">
-        <title>SUPERNN 2ちゃんねる掲示板ニュース速報アプリ 2ch News</title>
+        <title>VIETNN 2ちゃんねる掲示板ニュース速報アプリ 2ch News</title>
 				<meta name="description" CONTENT="アプリ,5ちゃんねる(旧2ちゃんねる,5ch,2ch)のニュース速報＋系掲示板を自動解析し、人気の高いニュース及び最新のニュースをリアルタイムで計算して提供しています。">
-				<meta name="keywords" CONTENT="アプリ,5ちゃんねる,2ちゃんねる,5ch,2ch,ニュース,速報,まとめ,祭り,SNN,SUPERNN,スレッド">
+				<meta name="keywords" CONTENT="アプリ,5ちゃんねる,2ちゃんねる,5ch,2ch,ニュース,速報,まとめ,祭り,VNN,VIETNN,スレッド">
         <!-- CSS -->
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic">
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,300,100,100italic,300italic,400italic,700,700italic">
@@ -47,7 +47,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html">SUPERNN</a>
+					<a class="navbar-brand" href="index.html">VIETNN</a>
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="top-navbar-1">
@@ -85,7 +85,7 @@
                 	
                     <div class="row">
                         <div class="col-sm-10 col-sm-offset-1 text wow fadeInLeft">
-                            <h1>SUPERNN - 2ch(5ch)掲示板ニュース速報アプリ</h1>
+                            <h1>VIETNN - 2ch(5ch)掲示板ニュース速報アプリ</h1>
 
                             <div class="description">
 
@@ -104,7 +104,7 @@
                             			<span class="button-1-right-top">ダウンロード</span>
                             		</span>
                             	</a>
-                            	<a class="button-2" href="https://play.google.com/store/apps/details?id=biz.tetraserve.snncli">
+                            	<a class="button-2" href="https://play.google.com/store/apps/details?id=biz.tetraserve.vnncli">
                             		<span class="button-2-left"><i class="fa fa-android"></i></span>
                             		<span class="button-2-right">
                             			<span class="button-2-right-bottom">Android</span>
@@ -138,7 +138,7 @@
 	        <div class="container">
 	            <div class="row">
 	                <div class="col-sm-12 features section-description wow fadeIn">
-	                    <h2>SUPERNNの特徴</h2>
+	                    <h2>VIETNNの特徴</h2>
 	                    <p>簡単に操作でき, 設定項目もほとんどありません!</p>
 	                </div>
 	            </div>
@@ -305,7 +305,7 @@
 											<span class="button-1-right-top">ダウンロード</span>
 										</span>
 									</a>
-									<a class="button-2" href="https://play.google.com/store/apps/details?id=biz.tetraserve.snncli">
+									<a class="button-2" href="https://play.google.com/store/apps/details?id=biz.tetraserve.vnncli">
 										<span class="button-2-left"><i class="fa fa-android"></i></span>
 										<span class="button-2-right">
 											<span class="button-2-right-bottom">Android</span>
@@ -316,9 +316,9 @@
 							</div>
 							<div class="row">
 								<div class="description">
-									<p>SUPERNNパンフレット(PDF)</p>
-									<a target="_blank" href="SUPERNN_Flyer.pdf">
-										<img src="SNN_Flayer_T.jpg"/>
+									<p>VIETNNパンフレット(PDF)</p>
+									<a target="_blank" href="VIETNN_Flyer.pdf">
+										<img src="VNN_Flayer_T.jpg"/>
 									</a>
 								</div>
 							</div>
@@ -352,7 +352,7 @@
 	        <div class="container">
 	            <div class="row">
                     <div class="col-sm-7 footer-copyright">
-                    	SUPERNN &copy; 2021 <a href="https://www.tetraserve.biz/">Tetraserve Co.,Ltd.</a>
+                    	VIETNN &copy; 2021 <a href="https://www.tetraserve.biz/">Tetraserve Co.,Ltd.</a>
                     </div>
                     <div class="col-sm-5 footer-social">
                     </div>
