--- a/public/tech.html
+++ b/public/tech.html
@@ -8,9 +8,9 @@
 				<meta name="viewport" content="width=device-width, initial-scale=1">
 				<meta http-equiv="Pragma" content="no-cache">
 				<meta http-equiv="Cache-Control" content="no-cache">
-        <title>SUPERNN - 技術情報</title>
+        <title>VIETNN - 技術情報</title>
 				<meta name="description" CONTENT="アプリ,5ちゃんねる(旧2ちゃんねる,5ch,2ch)のニュース速報＋系掲示板を自動解析し、人気の高いニュース及び最新のニュースをリアルタイムで計算して提供しています。">
-				<meta name="keywords" CONTENT="アプリ,5ちゃんねる,2ちゃんねる,5ch,2ch,ニュース,速報,まとめ,祭り,SNN,SUPERNN,スレッド">
+				<meta name="keywords" CONTENT="アプリ,5ちゃんねる,2ちゃんねる,5ch,2ch,ニュース,速報,まとめ,祭り,VNN,VIETNN,スレッド">
 
         <!-- CSS -->
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic">
@@ -48,7 +48,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html">SUPERNN</a>
+					<a class="navbar-brand" href="index.html">VIETNN</a>
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="top-navbar-1">
@@ -66,7 +66,7 @@
 								
 									<div class="row">
 											<div class="col-sm-10 col-sm-offset-1 text wow fadeInLeft">
-													<h1>SUPERNN - 掲示板速報アプリ</h1>
+													<h1>VIETNN - 掲示板速報アプリ</h1>
 
 											</div>
 									</div>
@@ -133,7 +133,7 @@
 	        <div class="container">
 	            <div class="row">
 								<div class="col-sm-7 footer-copyright">
-									SUPERNN &copy; 2021 <a href="https://www.tetraserve.biz/">Tetraserve Co.,Ltd.</a>
+									VIETNN &copy; 2021 <a href="https://www.tetraserve.biz/">Tetraserve Co.,Ltd.</a>
 								</div>
                     <div class="col-sm-5 footer-social">
                     </div>
