--- a/public/tutorial.html
+++ b/public/tutorial.html
@@ -8,9 +8,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="Pragma" content="no-cache">
         <meta http-equiv="Cache-Control" content="no-cache">
-        <title>SUPERNN - 開始画面</title>
+        <title>VIETNN - 開始画面</title>
 		<meta name="description" CONTENT="アプリ,5ちゃんねる(旧2ちゃんねる,5ch,2ch)のニュース速報＋系掲示板を自動解析し、人気の高いニュース及び最新のニュースをリアルタイムで計算して提供しています。">
-		<meta name="keywords" CONTENT="アプリ,5ちゃんねる,2ちゃんねる,5ch,2ch,ニュース,速報,まとめ,祭り,SNN,SUPERNN,スレッド">
+		<meta name="keywords" CONTENT="アプリ,5ちゃんねる,2ちゃんねる,5ch,2ch,ニュース,速報,まとめ,祭り,VNN,VIETNN,スレッド">
 
         <!-- CSS -->
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic">
@@ -44,7 +44,7 @@
 	        <div class="container">
 	            <div class="row">
 	                <div class="col-sm-12 screenshots section-description wow fadeIn">
-                        <h2>Welcome to SUPERNN!</h2>
+                        <h2>Welcome to VIETNN!</h2>
                     </div>
 <!--
                     <p>ご利用前に,最下部にあるボタンを押し,</p>
